# wayspan

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
LICENSES/: THIRD_PARTY_NOTICES.md
artifacts/cvm/environment/: git_state.txt  python_packages.txt  simulator_state.txt  system.txt
artifacts/cvm/manifests/run_manifests/: core_constant_velocity_clipgt-01d503d4-449b-46fc-8d78-9085e70d3554_17_full_contract.json  (+144 more)
artifacts/cvm/reports/: baseline_report.md  blockers.md  claim_evidence_matrix.md  contract_test_audit.md  experiment_report.md  release_decision.md  repository_inventory.md  submission_checklist.md  test_report.md
artifacts/cvm/results/: closed_loop_metrics.csv  runs.csv  semantic_ablation_pairs.csv  summary.csv  summary.json
artifacts/cvm/tables/: ablations.tex  contract_map.tex  fault_localization.tex  main_results.tex  paper_numbers.tex
artifacts/sii2027/environment/: git_state.txt  python_packages.txt  simulator_state.txt  system.txt
artifacts/sii2027/reports/: claim_evidence_matrix.md  contract_test_audit.md  test_report.md
artifacts/sii2027/results/: runs.csv  summary.csv  summary.json
artifacts/sii2027/tables/: contract_map.tex  paper_numbers.tex
configs/cvm/: core.yaml  semantic_ablation.yaml  temporal_ablation.yaml
docs/: README.md  benchmark_regeneration_handoff.md  challenge-compatibility.md  changelog.md  cli.md  conformance.md  demo.md  design.md  evaluation.md  evaluation_protocol.md  getting-started.md  integration_guide.md  readme_media.md  reproduction.md  waymo_motion_and_alpasim.md  waymo_readiness.md
docs/evidence/: benchmark_operator_matrix_20260706.json  benchmark_public_evidence_manifest_20260706.json  benchmark_regeneration_audit_20260706.json  benchmark_regeneration_commands_20260706.json  benchmark_regeneration_plan_20260706.json  benchmark_regeneration_readiness_20260706.json  benchmark_regeneration_resume_commands_20260706.json  benchmark_regeneration_status_20260706.json  closed_loop_spotlight_reflex_10scene_batch.json  closed_loop_spotlight_reflex_50scene_attempt_partial.json  closed_loop_spotlight_reflex_50scene_localprobe_1scene.json
integrations/alpasim_e2e_challenge/: README.md
paper/: paper.bib  paper.tex  wod_alpasim_2026.sty
paper/cvm/: CHANGELOG.md  REPRODUCE.md  main.tex  metadata.json  references.bib
scripts/: aggregate_cvm.py  aggregate_sii2027.py  batch_summary.py  benchmark_public_evidence_manifest.py  benchmark_readiness.py  benchmark_regeneration_commands.py  benchmark_regeneration_readiness.py  benchmark_regeneration_status.py  build_alpasim_local_usdz_cache.py  build_alpasim_oracle_actor_proxy.py  check_alpasim_readiness.py  generate_cvm_figures.py  promote_batch_summary.py  release_bootstrap_smoke.py  run_cvm_matrix.py  run_sii2027_matrix.py  run_synthetic_contract_demo.py  sii2027_inventory.sh  validate_cvm_submission.py  validate_sii2027_submission.py  wod2sim_doctor.py
src/minimal_shot_av/alpasim_overrides/: README.md
src/minimal_shot_av/simulator/: alpasim_direct_actor_planner.py  alpasim_spotlight.py  alpasim_token_bc.py
src/wod2sim/audit/: alpasim_export.py
src/wod2sim/neutral/: alpasim_metrics.py
src/wod2sim/simulator/: alpasim_contract.py  alpasim_direct_actor_planner.py  alpasim_signal.py  baseline_drivers.py  lifecycle_service.py
tests/: test_aggregate_cvm.py  test_aggregate_sii2027.py  test_alpasim_integration.py  test_alpasim_setup_scripts.py  test_audit_run_command.py  test_batch_summary.py  test_benchmark_operator_matrix.py  test_benchmark_public_evidence_manifest.py  test_benchmark_readiness.py  test_benchmark_regeneration_audit.py  test_benchmark_regeneration_commands.py  test_benchmark_regeneration_plan.py  test_benchmark_regeneration_readiness.py  test_benchmark_regeneration_status.py  test_benchmark_summary.py  test_build_alpasim_local_usdz_cache.py  test_check_alpasim_readiness.py  test_lifecycle_contract.py  test_promote_batch_summary.py  test_reproduce_closed_loop.py  test_run_alpasim_scene_batch.py  test_run_cvm_matrix.py  test_run_sii2027_matrix.py  test_support_bundle_command.py  test_synthetic_contract_demo.py  test_validate_cvm_submission.py  test_validate_sii2027_submission.py  test_wod2sim_doctor.py
(+194 files in other folders)
